--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation files('libs\\jxl.jar')
+    implementation files('libs\\jsoup-1.13.1.jar')
+    implementation 'com.squareup.okhttp3:okhttp:3.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 }
